# OptimaCore

./: Cargo.toml  README.md
src/: core.rs  ekf.rs  embedder.rs  ffi.rs  gpu_monitor.rs  hhtc.rs  lib.rs  llm_integration.rs  main.rs  optimacore.jl  verifier.rs
