[package]
name = "optimacore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rocksdb = "0.21"
rand = "0.8"
once_cell = "1.19"
flate2 = "1.0"
sysinfo = "0.30"

# Real Embedding Model Dependencies
candle-core = { version = "0.3", features = ["cuda"] }
candle-nn = "0.3"
candle-transformers = { version = "0.3", features = ["full"] }
tokenizers = "0.13"
hf-hub = "0.3"

# Corrected dependency for real GPU monitoring.
nvml-rs = "0.1.0"

# For LLM API integration
reqwest = { version = "0.11", features = ["json"] }

# Corrected Julia FFI Dependency
jlrs = { version = "0.19.0", features = ["async-rt", "sync-rt"] }