[package]
name = "optimacore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rocksdb = "0.21"
rand = "0.8"
once_cell = "1.19"
flate2 = "1.0"

# Corrected dependency for real GPU monitoring.
nvml-rs = "0.1.0"

# For LLM API integration
reqwest = { version = "0.11", features = ["json"] }

# Corrected Julia FFI Dependency
jlrs = { version = "0.19.0", features = ["async-rt", "sync-rt"] }
