[package]
name = "optimacore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rocksdb = "0.21"
once_cell = "1.19"
flate2 = "1.0"

# GPU monitoring via NVIDIA's NVML
nvml-wrapper = "0.11"

# Local model inference and embeddings
rust-bert = { version = "0.23", default-features = false, features = ["remote", "download-libtorch"] }

# Julia FFI Dependency
jlrs = { version = "0.19.0", features = ["async-rt", "sync-rt"] }
